[package]
name = "crimthy-dragnit-schemes"
version = "0.1.0"
authors = ["rostegg"]
edition = "2018"
repository = "https://github.com/crimthy/crimthy-dragnit-schemes"
license = "MIT"
description = "Crimthy schemes package (just magister project, don't use it)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dragnit = "0.1.1"


